--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+}
+html {
+  scroll-snap-type: y mandatory;
+}
+.app {
+  background-color: whitesmoke;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__main {
+  margin-top: 10px;
+  display: grid;
+  place-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appheader__button {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.app__videos {
+  position: relative;
+  border-radius: 20px;
+  height: 600px;
+  overflow: scroll;
+  width: 90%;
+  max-width: 500px;
+  scroll-snap-type: y mandatory;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__videos::-webkit-scrollbar {
+  display: none;
+}
+
+.header__link {
+  text-decoration: none;
+  margin-right: 20px;
 }
